# garagealarm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: README.md  build.gradle  settings.gradle
app/app/: build.gradle
app/app/src/androidTest/java/com/tomicooler/MyGarage/: ExampleInstrumentedTest.java
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/tomicooler/MyGarage/: DateUtils.java  Event.java  EventDao.java  EventListAdapter.java  EventRepository.java  EventRoomDatabase.java  EventViewHolder.java  EventViewModel.java  MainActivity.java  MyFirebaseMessagingService.java
app/app/src/main/res/layout/: activity_main.xml  content_main.xml  recyclerview_item.xml
app/app/src/main/res/menu/: menu_main.xml
app/app/src/main/res/mipmap-anydpi-v26/: garage_closed.xml
app/app/src/main/res/values/: garage_closed_background.xml  strings.xml  themes.xml
app/app/src/main/res/values-night/: themes.xml
app/app/src/test/java/com/tomicooler/MyGarage/: ExampleUnitTest.java
app/gradle/wrapper/: gradle-wrapper.properties
common/: common.cpp  common.h
doc/: architecture-pico-w.graphml  architecture.graphml
doorwatcher/: CMakeLists.txt  common.h  main.cpp
notifier/: README.md  garagealarm.service  main.py  pyproject.toml  run.sh
watchdog/: .gitignore  CMakeLists.txt  action.h  base64.cpp  base64.h  common.h  dateutils.cpp  dateutils.h  dns.cpp  dns.h  fcm.cpp  fcm.h  http.cpp  http.h  lwipopts.h  main.cpp  ntp.cpp  ntp.h  oauth2.cpp  oauth2.h  poller.cpp  poller.h  rs256.cpp  rs256.h  stringutils.cpp  stringutils.h  tcpclient.cpp  tcpclient.h  watchdog-config.h.example
